--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             // הבלוק כולו הוא קישור שמוביל לדף המילון עם ה-hash המתאים.
             return `
                 <a href="codex.html#${encodedWord}" 
-                   class="p-4 bg-white flex justify-between items-start transition-all duration-200 hover:bg-amber-100 mt-2" 
+                   class="p-4 bg-white flex justify-between items-start transition-all duration-200 hover:bg-amber-100" 
                    title="לחץ לפירוט המלא על המונח ${item.word}">
                     
                     <!-- צד ימין: עברית + אנגלית -->
@@ -254,3 +254,4 @@
     </script>
 </body>
 </html>
+
